# Telegram-QSTN-v1

./: README.md
CONTRACTS/: .gitignore  package.json
CONTRACTS/contracts/: messages.tact  messages_nft.tact  nft.tact  surveys_manager.tact  surveys_manager_nft.tact
CONTRACTS/nft-qstn/: package.json
CONTRACTS/qstn-nft/: package.json  tact.config.json
CONTRACTS/qstn-surveys/: package.json  tact.config.json
CONTRACTS/qstn-ton-survey/: README.md  package-lock.json  package.json
CONTRACTS/qstn-vault-wallet/: README.md  package.json
CONTRACTS/scripts/: deployNFTManager.ts  deploySurveysManager.ts
CONTRACTS/tests/: NFT.spec.ts  SurveysManager.ts
CONTRACTS/utils/: print.ts
CONTRACTS/wrappers/: NFT.compile.ts  NftItem.ts  NftManager.ts  Survey.ts  SurveysManager.compile.ts  SurveysManager.ts
DataWallet-API/: CreateDataWallet.tsx  CreateDataWalletLoader.tsx  DataWallet.tsx  DataWalletAuth.tsx  DataWalletAuthPage.tsx  DataWalletSignIn.tsx  index.tsx
DataWallet-API/credentials/: authPage.css  credential-details.js  credential-row-details.js  credentials-info.js  credentials-list-item.js  index.js  (+2 more)
Leaderboard/Backend/: Cargo.toml  README.md
Leaderboard/Backend/src/: main.rs
Leaderboard/Backend/src/config/: postgres_config.rs
Leaderboard/Backend/src/db/: db_queries.rs  mod.rs
Leaderboard/Backend/src/errors/: mod.rs  qstn_errors.rs
Leaderboard/Backend/src/handlers/: users.rs
Leaderboard/Backend/src/models/: user.rs
Leaderboard/Backend/src/sql/: get_users_submitted_surveys.sql
Leaderboard/Backend/src/tests/: users.rs
Ton-connector/: index.tsx
(+55 files in other folders)
