[package]
name = "bogdan-codetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = { version = "0.4.30", features = ["serde"] }
config = "0.13.3"
deadpool-postgres = { version="0.10.5", features = ["serde"]}
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
postgres = { version = "0.19.7", features = ["with-serde_json-1"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio-pg-mapper = { version = "0.2.0", features = ["tokio-pg-mapper-derive"] }
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
